Update Best Fortnite Maps.html

--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -132,8 +132,8 @@ aside {
 .video__youtube { padding-bottom: 56.23%; width: 100%; height:0; overflow:hidden; position: relative; background-color:black; }
 .video__placeholder { width:100%; position:absolute; top:0; left:0; height:100%; object-fit:cover; }
 .video__button { background:none; border:0; cursor:pointer; height:100%; left:0; position:absolute; text-indent:-9999px; top:0; width:100%; }
-.video__button:before { width:100%; height:100%; content:''; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); background:url(https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/fortnite.avif) no-repeat center center; background-size:10%; }
-.video__button:hover:before { background:url(https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/fortnite.avif) no-repeat center center; background-size:10%; }
+.video__button:before { width:100%; height:100%; content:''; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); background:url(https://github.com/Internetperson-dev/site/raw/refs/heads/main/etc/yt/yt.avif) no-repeat center center; background-size:10%; }
+.video__button:hover:before { background:url(https://github.com/Internetperson-dev/site/raw/refs/heads/main/etc/yt/yt.avif) no-repeat center center; background-size:10%; }
 .video__iframe { position:absolute; top:0; left:0; width:100%; height:100%; }
 </style>
 </head>
@@ -145,7 +145,7 @@ aside {
     <!-- Lightweight YouTube Embed -->
     <div class="video">
         <div class="video__youtube" data-youtube>
-            <img src="https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/etc/yt/thum.avif" class="video__placeholder" />
+            <img src="https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/fortnite.avif" class="video__placeholder" />
             <button class="video__button" data-youtube-button="https://www.youtube.com/embed/Pr9LcxHFE_k">Play</button>
         </div>
     </div>
