--- a/Best Fortnite Maps.html
+++ b/Best Fortnite Maps.html
@@ -24,108 +24,79 @@ body {
   color: #e8e8f0;
 }
 
-.wrap {
-    max-width:1100px;
-    margin:0 auto;
-}
+.wrap { max-width:1100px; margin:0 auto; }
 
 h1{
-    text-align:center;
-    margin:0 0 1.5rem;
-    color:#fff;
-    text-shadow:0 0 10px rgba(143,162,255,0.18);
-    font-size:2rem;
+  text-align:center;
+  margin:0 0 1.5rem;
+  color:#fff;
+  text-shadow:0 0 10px rgba(143,162,255,0.18);
+  font-size:2rem;
 }
 
 .layout {
-    display:grid;
-    grid-template-columns: 1fr 300px;
-    gap:2rem;
+  display:grid;
+  grid-template-columns: 1fr 300px;
+  gap:2rem;
 }
 
 main { min-height:100vh; }
 
 aside {
-    background:linear-gradient(145deg,#181824,#10101a);
-    border-radius:var(--radius);
-    padding:1rem;
-    border:1px solid #2c2c44;
-    color:var(--muted);
-    box-shadow:0 10px 30px rgba(0,0,0,0.45);
-    font-size:0.95rem;
+  background:linear-gradient(145deg,#181824,#10101a);
+  border-radius:var(--radius);
+  padding:1rem;
+  border:1px solid #2c2c44;
+  color:var(--muted);
+  box-shadow:0 10px 30px rgba(0,0,0,0.45);
+  font-size:0.95rem;
 }
 
 .preview {
-    display:grid;
-    grid-template-columns: 300px 1fr;
-    gap:1rem;
-    align-items:stretch;
-    background: linear-gradient(145deg, var(--card-a), var(--card-b));
-    border-radius: var(--radius);
-    overflow:hidden;
-    border:1px solid #292947;
-    box-shadow:0 6px 18px rgba(0,0,0,0.45);
-    margin-bottom:1.25rem;
-    min-height:150px;
+  display:grid;
+  grid-template-columns: 300px 1fr;
+  gap:1rem;
+  align-items:stretch;
+  background: linear-gradient(145deg, var(--card-a), var(--card-b));
+  border-radius: var(--radius);
+  overflow:hidden;
+  border:1px solid #292947;
+  box-shadow:0 6px 18px rgba(0,0,0,0.45);
+  margin-bottom:1.25rem;
+  min-height:150px;
 }
 
 .preview img {
-    width:100%;
-    height:100%;
-    object-fit:cover;
-    display:block;
-    background:linear-gradient(180deg,#0c0c14,#11111a);
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  display:block;
+  background:linear-gradient(180deg,#0c0c14,#11111a);
 }
 
-.info {
-    padding:1rem 1.25rem;
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-}
-
-.info h3 {
-    margin:0 0 0.5rem 0;
-    color:#fff;
-    font-size:1.15rem;
-    text-shadow:0 0 6px rgba(100,150,255,0.18);
-}
-
+.info { padding:1rem 1.25rem; display:flex; flex-direction:column; justify-content:center; }
+.info h3 { margin:0 0 0.5rem 0; color:#fff; font-size:1.15rem; text-shadow:0 0 6px rgba(100,150,255,0.18); }
 .info p { margin:0; color:var(--muted); line-height:1.45; font-size:0.96rem; }
 
-.meta-row {
-    margin-top:0.75rem;
-    display:flex;
-    gap:0.75rem;
-    align-items:center;
-    color:#9fb2ff;
-    font-size:0.85rem;
-}
-
-.link {
-    margin-top:0.6rem;
-    display:inline-block;
-    font-size:0.9rem;
-    color:#a8bfff;
-    text-decoration:none;
-    opacity:0.95;
-}
+.meta-row { margin-top:0.75rem; display:flex; gap:0.75rem; align-items:center; color:#9fb2ff; font-size:0.85rem; }
+.link { margin-top:0.6rem; display:inline-block; font-size:0.9rem; color:#a8bfff; text-decoration:none; opacity:0.95; }
 
 .no-image {
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    color:var(--muted);
-    font-weight:600;
-    font-size:1rem;
-    background:linear-gradient(180deg,#0c0c14,#0e0e18);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  color:var(--muted);
+  font-weight:600;
+  font-size:1rem;
+  background:linear-gradient(180deg,#0c0c14,#0e0e18);
 }
 
+/* --- Responsive --- */
 @media (max-width:980px){
-    .layout{ grid-template-columns: 1fr; }
-    .preview { grid-template-columns: 1fr; }
-    .preview img { height:220px; }
-    aside { order:-1; }
+  .layout{ grid-template-columns: 1fr; }
+  .preview { grid-template-columns: 1fr; }
+  .preview img { height:220px; }
+  aside { order:-1; }
 }
 
 /* --- Lightweight YouTube embed styles --- */
@@ -200,7 +171,7 @@ document.addEventListener('DOMContentLoaded', () => {
     window.code.lightweightYoutubePlayer().init();
 });
 
-/* --- Fortnite Maps Previews --- */
+/* --- Fortnite Maps Previews w/ Client-Side Preloading & Skeletons --- */
 const FALLBACK_SVG = 'data:image/svg+xml;utf8,' + encodeURIComponent(`<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="800"><defs><linearGradient id="g" x1="0" x2="1"><stop offset="0" stop-color="#0c0c14"/><stop offset="1" stop-color="#11111a"/></linearGradient></defs><rect width="100%" height="100%" fill="url(#g)"/><g fill="#bdbde6" font-family="sans-serif" font-size="40" text-anchor="middle"><text x="50%" y="48%">No preview image</text><text x="50%" y="60%" font-size="24" opacity="0.85">Click the card to open the map</text></g></svg>`);
 
 const maps = [
@@ -210,34 +181,41 @@ const maps = [
   { url:"https://www.fortnite.com/@epic/ranked-ballistic?lang=en-US", title:"Ranked Ballistic (By Epic Games)", desc:"A kinda fun Counter-Strike–like map by Epic Games." }
 ];
 
-async function createPreview(map){
-  const cacheKey='preview_'+map.url;
-  let meta=null;
-  const cached=localStorage.getItem(cacheKey);
-  if(cached){ try{ meta=JSON.parse(cached); }catch(e){meta=null;} }
-  if(!meta){
-    try{
-      const res=await fetch('https://api.microlink.io/?url='+encodeURIComponent(map.url));
-      const json=await res.json();
-      meta=json.data||null;
-      if(meta) localStorage.setItem(cacheKey,JSON.stringify(meta));
-    }catch(err){ console.warn('preview fetch failed for',map.url,err); meta=null; }
-  }
-  renderPreview(map,meta);
-}
+// Render skeleton immediately
+const container = document.getElementById('container');
+maps.forEach(map => {
+    const card = document.createElement('article');
+    card.className = 'preview';
+    card.innerHTML = `<a href="${map.url}" target="_blank" rel="noopener noreferrer" style="display:block; color:inherit;">
+        <div class="thumb-wrap"><div class="no-image"></div><img class="real" style="display:none;" /></div>
+        <div class="info"><h3>${map.title}</h3><p>${map.desc}</p><div class="meta-row"><span>View on Fortnite</span></div></div>
+    </a>`;
+    container.appendChild(card);
+});
 
-function renderPreview(map,meta){
-  const container=document.getElementById('container');
-  const card=document.createElement('article'); card.className='preview';
-  const imgUrl=(meta&&meta.image&&meta.image.url)?meta.image.url:FALLBACK_SVG;
-  card.innerHTML=`<a href="${map.url}" target="_blank" rel="noopener noreferrer" style="display:block; color:inherit;">
-    <div class="thumb-wrap"><img src="${imgUrl}" alt="${map.title}" onerror="this.onerror=null; this.src='${FALLBACK_SVG}';" /></div>
-    <div class="info"><h3>${map.title}</h3><p>${map.desc}</p><div class="meta-row"><span>View on Fortnite</span></div></div>
-  </a>`;
-  container.appendChild(card);
-}
+// Client-side preloading and replacement
+maps.forEach((map,i)=>{
+    const imgEl = container.querySelectorAll('.real')[i];
+    const cacheKey = 'preview_' + map.url;
+    let meta = null;
+    const cached = localStorage.getItem(cacheKey);
+    if(cached){ try{ meta=JSON.parse(cached); }catch(e){meta=null;} }
 
-maps.forEach(createPreview);
+    if(!meta){
+        fetch('https://api.microlink.io/?url='+encodeURIComponent(map.url))
+        .then(res=>res.json())
+        .then(json=>{ meta=json.data||null; if(meta)localStorage.setItem(cacheKey,JSON.stringify(meta)); })
+        .catch(err=>{ console.warn('preview fetch failed',map.url,err); meta=null; })
+        .finally(()=>{ setTimeout(()=>setImage(imgEl,map,meta),0); });
+    } else { setImage(imgEl,map,meta); }
+});
+
+function setImage(imgEl,map,meta){
+    const url = (meta && meta.image && meta.image.url)?meta.image.url:FALLBACK_SVG;
+    const tmp = new Image();
+    tmp.src = url;
+    tmp.onload = ()=>{ imgEl.src=url; imgEl.style.display='block'; imgEl.previousElementSibling.style.display='none'; };
+}
 </script>
 </body>
 </html>
